<resources>
    <string name="app_name">RoversApp</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="signup">Sign Up</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="andhra_pradesh">Andhra Pradesh</string>
    <string name="arunachal_pradesh">Arunachal Pradesh</string>
    <string name="assam">Assam</string>
    <string name="bihar">Bihar</string>
    <string name="chhattisgarh">Chhattisgarh</string>
    <string name="goa">Goa</string>
    <string name="rover_app">Rover App</string>
    <string name="menu">㆔</string>
    <string name="gujarat">Gujarat</string>
    <string name="haryana">Haryana</string>
    <string name="himachal_pradesh">Himachal Pradesh</string>
    <string name="jammu_and_kashmir">Jammu and Kashmir</string>
    <string name="jharkhand">Jharkhand</string>
    <string name="karnataka">Karnataka</string>
    <string name="kerala">Kerala</string>
    <string name="madhya_pradesh">Madhya Pradesh</string>
    <string name="maharashtra">Maharashtra</string>
    <string name="manipur">Manipur</string>
    <string name="meghalaya">Meghalaya</string>
    <string name="mizoram">Mizoram</string>
    <string name="nagaland">Nagaland</string>
    <string name="odisha">Odisha</string>
    <string name="punjab">Punjab</string>
    <string name="rajasthan">Rajasthan</string>
    <string name="sikkim">Sikkim</string>
    <string name="tamil_nadu">Tamil Nadu</string>
    <string name="telangana">Telangana</string>
    <string name="tripura">Tripura</string>
    <string name="uttar_pradesh">Uttar Pradesh</string>
    <string name="uttarakhand">Uttarakhand</string>
    <string name="west_bengal">West Bengal</string>
</resources>
